fix: compilation errors